social,  mail and stuff

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Be Part
-                    <br>Of Our
+                    <br>Of My
                     <br>Story!</h4>
                 </div>
               </li>
@@ -510,23 +510,6 @@
                  however it had most of the strings and made sound, 
                  so it let me learn some riffs and chords. Once i tried electric, 
                  i had to have one. In latter years i advanced in my skills and instrument quality.</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
           <div class="col-sm-4">
@@ -534,32 +517,15 @@
               <img class="mx-auto rounded-circle" src="img/hobbies/cat-lifting.jpg" alt="">
               <h4 class = "hobbies-heading">Powerbuilding</h4>
               <p class="text-muted">I like workout in general, 
-                and my first contact with gym was about 10 years ago. </p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
+                and my first contact with gym was about 10 years ago. </p>            
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/hobbies/motorcycle-sm.jpg" alt="">
-              <h4 class = "hobbies-heading">Diana Pertersen</h4>
-              <p class="text-muted hobbies-heading ">Lead Developer</p>
-              <ul class="list-inline social-buttons">
+              <h4 class = "hobbies-heading">Motorcycling</h4>
+              <p class="text-muted hobbies-heading ">Motorcycling</p>
+              <!-- <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
                     <i class="fa fa-twitter"></i>
@@ -575,14 +541,14 @@
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -594,8 +560,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase hobbies-heading ">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase hobbies-heading ">Contact Me</h2>
+            <h3 class="section-subheading text-primary">Feel free to send me a message</h3>
           </div>
         </div>
         <div class="row">
@@ -623,10 +589,18 @@
                   </div>
                 </div>
                 <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
+                <!-- <div class="col-lg-12 text-center">
                   <div id="success"></div>
                   <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-                </div>
+                </div> -->
+                <div class="col-lg-12 text-center">
+                    <div id="success"></div>
+                        <a onclick="javascript:window.open('mailto:mail@domain.com', 'mail');
+                          event.preventDefault()"
+                         href="mailto:damir.pjetlovic@gmail.com">
+                    <button  class="btn btn-primary btn-xl text-uppercase" type="button">
+                      Send Message</button></a>
+                  </div>
               </div>
             </form>
           </div>
@@ -635,27 +609,27 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="under-line">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright"> © 2018 all rights reserved</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-twitter"></i>
+                <a href="https://github.com/Damirhub" target="_blank">
+                  <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
+                <a href="https://www.facebook.com/pjetlovic.damir" target="_blank">
+                  <i class="fab fa-facebook"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-linkedin"></i>
+                <a href="https://www.linkedin.com/in/damir-pjetlovic-68509a123/" target="_blank">
+                  <i class="fab fa-linkedin"></i>
                 </a>
               </li>
             </ul>
@@ -663,11 +637,11 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
+                <h6 style="color:brown">damir.pjetlovic@gmail.com</h6>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">Terms of Use</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
