--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="icon" href="/img/code-red-sm.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="/img/code-sm2.png" type="image/gif" sizes="16x16">
     <title>Damir Pjetlović</title>
 
     <!-- Bootstrap core CSS -->
@@ -1014,7 +1014,7 @@
                     <div class="modal-body">
                       <!-- Project Details Go Here -->
                       <h2 class="text-uppercase">Smart Cargo Logistics</h2>
-                      <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                      <p class="item-intro text-muted">Header background is actually view of a code of this page.</p>
                       <iframe width="100%" height="480" 
                       src="index.html" 
                       frameborder="0" allowfullscreen></iframe>
@@ -1024,8 +1024,8 @@
                       </p>
                       <ul class="list-inline">
                         <li>HTML</li>
-                        <li>CSS</li>
-                        <li>jQuery</li>
+                        <li>SASS</li>
+                        <li>Bootstrap 4</li>
                       </ul>
                       <a href="index.html">
                         <button class="btn btn-dark" type="button"> 
