--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <link rel="icon" href="/img/code-sm2.png" type="image/gif" sizes="16x16">
-    <title>Damir Pjetlović</title>
+    <title>Pjetlović Damir</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -81,7 +81,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Technologies</h2>
-            <h3 class="section-subheading text-muted">There are the ones i use the most</h3>
+            <h3 class="section-subheading text-muted">Here are the ones i use the most</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -402,7 +402,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>Back in 20th century</h4>
-                    <h4 class="subheading">Humble Beginnings</h4>
+                    <h5 class="subheading">Humble Beginnings</h5>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
@@ -422,7 +422,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>New Milenium and my first PC!</h4>
-                    <h4 class="subheading">GeForce baby</h4>
+                    <h5 class="subheading">GeForce baby</h5>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">
@@ -430,8 +430,7 @@
                       Title was <strong> "Electrotechnician Of Computers". </strong>
                       Unlike Elementary school where i had highest grades with litle effort,
                       and even get to some math competitions, high school was more challenging.
-                      I've learned lot of useful stuff tough.   
-                      
+                      I've learned lot of useful stuff tough.                        
                       </p>
                   </div>
                 </div>
@@ -442,11 +441,14 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>Hardware 'N Roses</h4>
+                    <h5 class="subheading">Some of my first jobs</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Aside from family bussines of cultivating roses, i have started to work with computer hardware, and repairs. 
+                      In that time i very interested in how stuff works. I did and continued freelancing 
+                      also in later years. Some of that time was spent in a computer repair shop.
+                    </p>
                   </div>
                 </div>
               </li>
@@ -456,11 +458,14 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
+                    <h4>Gimme more</h4>
+                    <h5 class="subheading">To the Software station...</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">So the next step was to go further, 
+                      and it was College of Applied Studies called <strong>"Visoka Škola Elektrotehnike i Računarstva"</strong>, 
+                      also known as <strong>VISER</strong>, located in Belgrade.
+                      <strong>"New Computer Technologies"</strong> was the title of choice.</p>
                   </div>
                 </div>
               </li>
@@ -470,14 +475,59 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>Heavy Metal and stuff</h4>
+                    <h5 class="subheading">What's next?</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Sure it was not easy, but the hardest part was 
+                      realising that jobs offering, doesn't really rely on the stuff i studied. 
+                      Also needed skills looked very hard to obtain, so naturally, i started to gravitate 
+                      to other things. Thanks to that, and my curious nature,
+                       i have become very dexterous with tools, and i know how to fix made
+                        or do many things. Anyway you're not here because of my
+                         <strong>welding skills, or the icecream factory</strong>...
+
+                    </p>
                   </div>
                 </div>
               </li>
+              <li class="timeline-inverted">
+                  <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                  </div>
+                  <div class="timeline-panel">
+                    <div class="timeline-heading">
+                      <h4>Here we go again</h4>
+                      <h5 class="subheading">Lets StartIt</h5>
+                    </div>
+                    <div class="timeline-body">
+                      <p class="text-muted">Meanwhile, i regain interest in IT, 
+                        graduated VISER, and decided to start learning to be a <strong>Front End Developer.</strong> 
+                        Soon after, <strong> Startit</strong> organized <strong>web course, which i attended and finished.</strong> 
+                        I'm very thankfull for all the help, and advices, of the people i've met there.                        
+                        </p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="timeline-image">
+                    <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                  </div>
+                  <div class="timeline-panel">
+                    <div class="timeline-heading">
+                      <h4>No Solutions</h4>
+                      <h5 class="subheading">But still no solution</h5>
+                    </div>
+                    <div class="timeline-body">
+                      <p class="text-muted">In August 2017 i have started to work in "No Solutions",
+                         in Novi Sad. The deal was to be there as an intern,
+                          and after few months to begin to work for real. I've done few projects,
+                           and assisted on a Gambling web app, the company have grown meanwhile, 
+                           but unfortunately not in a Front End department as it was planned, so... let's see whats next!</p>
+                    </div>
+                  </div>
+                </li>
+                
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Be Part
@@ -667,9 +717,9 @@
                   <h2 class="text-uppercase">EMI</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt=""> -->
-                  <iframe  height="480" width="100%"
+                  <!-- <iframe  height="480" width="100%"
                   src="http://kafaemi.co.nf/" 
-                  frameborder="0" allowfullscreen></iframe>
+                  frameborder="0" allowfullscreen></iframe> -->
                   <br/>
                   <hr/>
                   <p>My first project. Logos and design are done by myself, with very limited coding knowledge that time.              
@@ -712,9 +762,9 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Turkey</h2>
                   <p class="item-intro text-muted">Background experiment - click on winners.</p>
-                  <iframe width="100%" height="480" 
+                  <!-- <iframe width="100%" height="480" 
                   src="http://turkishstart.co.nf/" 
-                  frameborder="0" allowfullscreen></iframe>
+                  frameborder="0" allowfullscreen></iframe> -->
                   <br/>
                   <hr/>
                   <p>Bootstrap demonstration, overlays. Responsive Homepage, and Gallery.             
