--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="icon" href="/img/code-sm2.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="/img/favicon.png" type="image/gif" sizes="16x16">
     <title>Pjetlović Damir</title>
 
     <!-- Bootstrap core CSS -->
@@ -375,7 +375,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Inception</h4>
-              <p class="text-muted">Font end and design</p>
+              <p class="text-muted">Front end and design</p>
             </div>
           </div>
         </div>
@@ -389,7 +389,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">My Path</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Some of my expiriences</h3>
           </div>
         </div>
         <div class="row">
@@ -547,7 +547,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase hobbies-heading">My Hobbies</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">What i do, when i dont have other things to do</h3>
           </div>
         </div>
         <div class="row">
@@ -566,15 +566,23 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/hobbies/cat-lifting.jpg" alt="">
               <h4 class = "hobbies-heading">Powerbuilding</h4>
-              <p class="text-muted">I like workout in general, 
-                and my first contact with gym was about 10 years ago. </p>            
+              <p class="text-muted">Powerbuilding is a crossover between Bodybuilding and a Powerlifting. 
+                It combines techniques of both, to get the best results in aestetics, and strength. 
+                Many years ago went from my first visit to gym. Also i'm doing other sports and activities,
+                but working out in the gym is the most regular.  
+                
+              </p>            
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/hobbies/motorcycle-sm.jpg" alt="">
-              <h4 class = "hobbies-heading">Motorcycling</h4>
-              <p class="text-muted hobbies-heading ">Motorcycling</p>
+              <h4 class = "hobbies-heading"> Motorcycling</h4>
+              <p class="text-muted ">
+                My age was about 13 or 14, when my friend decided to learn me how to ride his "Tomos APN-6" moped.
+                Going that fast on two wheels without turning pedals? Fascinating! 
+                I was instantly hooked, and loved that unique feeling. I still do.
+              </p>
               <!-- <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -620,37 +628,39 @@
               <div class="row">
                 <div class="col-md-6 ">
                   <div class="form-group">
-                    <input class="form-control" disabled id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                    <input class="form-control" enabled id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" disabled id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
+                    <input class="form-control" enabled id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" disabled id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
+                    <input class="form-control" enabled id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <textarea class="form-control" disabled id="message" placeholder="Your Message * Temporarily disabled, please contact me on: damir.pjetlovic@gmail.com" required data-validation-required-message="Please enter a message."></textarea>
+                    <textarea class="form-control" enabled id="message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="clearfix"></div>
-                <!-- <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center">
                   <div id="success"></div>
                   <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-                </div> -->
-                <div class="col-lg-12 text-center">
+                </div>
+
+                  <!-- --- formail -->
+                <!-- <div class="col-lg-12 text-center">
                     <div id="success"></div>
                         <a onclick="javascript:window.open('mailto:mail@domain.com', 'mail');
                           event.preventDefault()"
                          href="mailto:damir.pjetlovic@gmail.com">
                     <button  class="btn btn-primary btn-xl text-uppercase" type="button">
                       Send Message</button></a>
-                  </div>
+                  </div> -->
               </div>
             </form>
           </div>
@@ -720,6 +730,7 @@
                   <!-- <iframe  height="480" width="100%"
                   src="http://kafaemi.co.nf/" 
                   frameborder="0" allowfullscreen></iframe> -->
+                  <h1>Unavailable at the moment</h1>
                   <br/>
                   <hr/>
                   <p>My first project. Logos and design are done by myself, with very limited coding knowledge that time.              
@@ -765,6 +776,7 @@
                   <!-- <iframe width="100%" height="480" 
                   src="http://turkishstart.co.nf/" 
                   frameborder="0" allowfullscreen></iframe> -->
+                  <h1>Unavailable at the moment</h1>
                   <br/>
                   <hr/>
                   <p>Bootstrap demonstration, overlays. Responsive Homepage, and Gallery.             
